--- a/css/global.css
+++ b/css/global.css
@@ -1,12 +1,35 @@
 body {
 	font-family: 'Roboto', sans-serif;
+	color: white;
 	background-color: #333;
+	text-align: center;
 	padding-top: 65px; 
 }
 
 nav {
 	padding: 15px 30px 15px 15px;
 	font-size: 20px;
+}
+
+h1 {
+	font-size: 50px;
+}
+
+footer {
+	font-size: 20px;
+}
+
+.about {
+	padding: 30px 300px 30px 300px;
+}
+
+.image {
+	width: 350px;
+	height: 350px;
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+	border-radius: 50%;
 }
 
 .navbar-right {
