--- a/css/global.css
+++ b/css/global.css
@@ -7,8 +7,13 @@ body {
 }
 
 nav {
+	background-color: #333;
 	padding: 15px 30px 15px 15px;
 	font-size: 20px;
+}
+
+.navbar-nav {
+	background-color: #333;
 }
 
 h1 {
@@ -19,9 +24,9 @@ footer {
 	font-size: 14px;
 }
 
-.about {
+/*.about {
 	padding: 30px 300px 30px 300px;
-}
+}*/
 
 .image {
 	width: 350px;
